fixing the fonts and window overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  /* overflow: hidden; */
 }
 
 .card {
@@ -20,6 +21,7 @@
   font-size: 16px;
   transform-origin: top center;
   cursor: pointer;
+  user-select: none;
 }
 
 .card-value {
