--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Noto+Emoji:wght@300..700&display=swap");
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -14,10 +12,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
+
+  -webkit-tap-highlight-color: transparent;
 }
 
 .noto-emoji-phasefinity {
-  font-family: "Noto Color Emoji", sans-serif;
+  font-family: "Noto Emoji", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -38,6 +38,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
